<resources>
    <string name="app_name">LevkoHomework9</string>
    <string name="hello">Hello</string>
    <string name="login_et">Login:</string>
    <string name="pass_et">Password:</string>
    <string name="register">Register</string>
    <string name="login_btn">Login</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="warning_login_fail_title">Login failure</string>
    <string name="warning_login_fail_message">User not found or password incorrect</string>
    <string name="toast_fields_incomplete">Please, fill in the fields</string>
    <string name="login_success_title">Login success</string>
    <string name="login_success_message">Welcome</string>
    <string name="registration_success">User</string>
    <string name="confirm">Ok</string>
</resources>
